# onde-sentry-mcp

./: .gitignore  README.md  SETUP.md  pyproject.toml
.github/workflows/: test.yml
onde_sentry_mcp/: __init__.py  _config.py  client.py  server.py
onde_sentry_mcp/tools/: __init__.py  alerts.py  auth.py  issues.py  projects.py
tests/: test_client.py  test_imports.py
