[project]
name = "onde-sentry-mcp"
version = "0.1.0"
description = "Sentry MCP server for Onde — focused tool surface for issue debugging + alert-rule provisioning, User-Auth-Token based."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Adelaida Diaz-Roa" }]
keywords = ["mcp", "model-context-protocol", "claude", "fastmcp", "sentry", "observability"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "fastmcp>=3.2.4",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<10.0",
    "respx>=0.21,<1.0",
    "ruff>=0.8,<1.0",
]

[project.urls]
Repository = "https://github.com/adelaidasofia/onde-sentry-mcp"

[project.scripts]
onde-sentry-mcp = "onde_sentry_mcp.server:main"

[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["onde_sentry_mcp*"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
